{
    "version": 1,
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "e5046d00-bf95-4ecc-b127-d4b5d8bbb5d5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "00a06e64-4ad8-4151-9f19-19468075fd03",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0190aa66-0b67-47e4-9ede-fc4002a8bebd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1fbdae58-2a52-44c9-ab0d-f949a5d0b0f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4cf5e211-4d8c-4b11-b9b6-d8810b5c0623",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "073cf470-dfef-4780-9f12-5f7e116fb763",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5187df54-4ec9-4873-9908-4d0eed9aa31f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}